# emailVariationGenerator

./: LICENSE  README.md  build.py  build_linux.sh  build_windows.bat  email_generator.py  main.py  pyproject.toml
